# sequential-learning

./: analysis.py  autocorr_transition_script.py  auxiliary.py  figures.conf  figures.py  pyproject.toml  rep_transition_script.py  shape_script.py  smooth_transition_script.py  transition_script.py  visualization.py
sequential_learning/: analysis.py  ann_representation.py  ann_scripts.py  auxiliary.py  decision_script.py  extrapolation_script.py  figures.conf  figures.py  prototype_extrapolation_script.py  prototype_extrapolation_scripy.py  rep_transition_script.py  shape_script.py  transition_script.py  visualization.py
sequential_learning/theory/: input_output.py  training.py
