[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequential-learning"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wj2", email = "wjeffreyjohnston@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy~=1.26.4",
  "scipy~=1.14.1",
  "pandas~=2.2.2",
  "matplotlib~=3.9.2",
  "scikit-learn~=1.5.1",
  "scikit-image~=0.22.0",
]

[project.scripts]
sl_decision = "sequential_learning.decision_script:main"

[project.urls]
Documentation = "https://github.com/wj2/sequential-learning#readme"
Issues = "https://github.com/wj2/sequential-learning/issues"
Source = "https://github.com/wj2/sequential-learning"

[tool.hatch.version]
path = "sequential_learning/__about__.py"

[project.optional-dependencies]
general = [
  "general @ git+https://github.com/wj2/general-neural.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.test]
python = "3.12"
features = [
  "general",
]
